ADD: Method to retrieve available KBs in Store Knowledge Base interface; ADD: GET method to retrieve available KBs
