# api/main.go
@@ -138,6 +138,7 @@ func main() {
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	e.POST("/knowledge-base/:KBName", CreateKB)
 	e.POST("/knowledge-base", AddDataToKB)
+	e.GET("/knowledge-base", GetAvailableKBs)
 	e.POST("/message", SingleShotMessage)
 	e.Logger.Fatal(e.Start(":1323"))
 }
